[tool.poetry]
name = "amex"
version = "0.1.0"
description = ""
authors = ["Yixin Xie <yixin.ethan.xie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
feather-format = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
